@@ -1,3 +1,5 @@
+#' @include as-osmar.R
+{}
 
 
 
@@ -43,12 +45,12 @@
 #'   A list of one or more \link[sp]{sp} objects; see Details section.
 #'
 #' @examples
-#'   \dontrun{
-#'     muc <- get_osm(center_bbox(11.575278, 48.137222, 200, 200))
-#'     muc_points <- as_sp(muc, "points")
-#'     muc_lines <- as_sp(muc, "lines")
-#'     muc_polygons <- as_sp(muc, "polygons")
-#'   }
+#'   data("muc", package = "osmar")
+#'   muc_points <- as_sp(muc, "points")
+#'   muc_lines <- as_sp(muc, "lines")
+#'   muc_polygons <- as_sp(muc, "polygons")
+#'
+#'   bbox(muc_points)
 #'
 #' @export
 as_sp <- function(obj, what = c("points", "lines", "polygons"),
