@@ -71,14 +71,12 @@ subset_relations <- function(x, ids) {
 #'   elements
 #'
 #' @examples
-#'   \dontrun{
-#'     muc <- get_osm(center_bbox(11.575278, 48.137222, 200, 200))
-#'     id <- find(muc, node(tags(v == "Marienplatz")))
+#'   data("muc", package = "osmar")
+#'   id <- find(muc, node(tags(v == "Marienplatz")))
 #'
-#'     subset(muc, node_ids = id)
+#'   subset(muc, node_ids = id)
 #'
-#'     subset(muc, ids = find_up(muc, node(id)))
-#'   }
+#'   subset(muc, ids = find_up(muc, node(id)))
 #'
 #' @method subset osmar
 #'
