@@ -29,13 +29,11 @@
   \code{\link{osm_descriptors}}.
 }
 \examples{
-\dontrun{
-    muc <- get_osm(center_bbox(11.575278, 48.137222, 200, 200))
-    find(muc, node(tags(v == "Marienplatz")))
-    find(muc, node(tags(v \%agrep\% "marienplatz")))
-    find(muc, node(attrs(id == 19475890)))
-    find(muc, way(tags(k == "highway" & v == "pedestrian")))
-  }
+data("muc", package = "osmar")
+  find(muc, node(tags(v == "Marienplatz")))
+  find(muc, node(tags(v \%agrep\% "marienplatz")))
+  find(muc, node(attrs(id == 19475890)))
+  find(muc, way(tags(k == "highway" & v == "pedestrian")))
 }
 \seealso{
   binary_grep
